@@ -1,6 +1,7 @@
 Revision history for Twitter::API
 
 {{$NEXT}}
+  - rudimentary support for Twitter API V2 early access / beta
 
 1.0005  2018-10-02 10:45:08 PDT
   - force fallback to WWW::Form::UrlEncoded::PP for tests
